frontend/app/assets/css/base.css
/* ... */
.content-block {
    max-width: 100%;
    background-color: var(--content-bg-color);
    border-radius: var(--content-border-radius);
    box-shadow: var(--content-box-shadow);
}

.content-block-glass {
    background-color: var(--content-bg-color-glass);
}

.content-bg {
    background-color: var(--content-bg-color);
}

.alt-content-bg {
    background-color: var(--alt-content-bg-color);
}

.v-select {
    width: 100%;
}

.list-button {
    display: flex;
    flex-wrap: wrap;
    gap: 4px;
    color: var(--text-color);
    border-radius: var(--content-border-radius);
    background-color: var(--alt-content-bg-color);
    padding: 1rem;
    flex: 1;
    box-shadow: var(--content-box-shadow);
}

.text-success {
    color: var(--success-color);
}

.text-danger {
    color: var(--danger-color);
}

.text-warning {
    color: var(--warning-color);
}

.input-error {
    outline-style: groove !important;
    outline-color: var(--danger-color) !important;
}

.ratio-image {
    object-fit: cover;
    aspect-ratio: 2/1;
    width: 100%;
}

@media (max-width:768px) {
    .latest-games .game:nth-of-type(n+4) {
        display: none;
    }
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
    }
}

@media (min-width:768px) and (max-width:1280px) {
    .latest-games .game:nth-of-type(n+5) {
        display: none;
    }
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
    }
}

@media (min-width:1280px) and (max-width:1536px) {
    .latest-games .game:nth-of-type(n+6) {
        display: none
    }
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
    }
}

@media (min-width:1536px) and (max-width:1920px) {
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(270px, 1fr)) !important;
    }
}

.threads-grid {
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
}


.mods-grid {
    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
}

.games-grid {
    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
}

.games-grid, .mods-grid, .threads-grid {
    display: grid;
}

p {
    margin-top: 0;
    margin-bottom: 1rem;
}

.markdown > p:last-child {
    margin-bottom: 0;
}

.md-editor-open {
    overflow: hidden;
}

.markdown video {
    height: 315px;
    width: 560px;
}

/* So gap works nicely if font size is set as 16px, 
but we decided to go with 14px so guess what? gap is inconsistent as there is no such thing as float pixel.
*/

.gap-1 {
    grid-gap: 4px;
    gap: 4px;
}

.gap-2 {
    grid-gap: 8px;
    gap: 8px;
}

.gap-3 {
    grid-gap: 12px;
    gap: 12px;
}

.gap-4 {
    grid-gap: 16px;
    gap: 16px;
}

.gap-5 {
    grid-gap: 20px;
    gap: 20px;
}

.gap-6 {
    grid-gap: 24px;
    gap: 24px;
}

.gap-7 {
    grid-gap: 28px;
    gap: 28px;
}

.gap-8 {
    grid-gap: 32px;
    gap: 32px;
}

.circle {
    height: 12px;
    width: 12px;
    border-radius: 1em;
    display: inline-flex;
}

.menu-closer {
    background-color: #00000080;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.collapse-button {
    font-size: 1.5rem;
}

@media (min-width:1024px) {
    .nav-menu.flex-col {
        display: flex !important;
    }
}

@media (max-width:1024px) {
    .nav-menu.flex-col {
        background: var(--content-bg-color);
        border-radius: var(--border-radius);
        left: 4px;
        top: 64px;
        align-items: start;
        position: fixed;
        z-index: 100;
        height: calc(100vh - 70px);
        flex: 1;
    }
}

.float-bg {
    background: var(--float-bg-color);
}

.icon {
    vertical-align: -0.25rem;
    overflow: visible !important;
}

svg:not(:root).icon, svg:not(:host).icon {
    overflow: visible ;
    box-sizing: content-box;
}

.focus {
    background-color: var(--warning-bg-color) !important;
    border-left: solid 3px var(--warning-color);
    border-radius: var(--border-radius);
}

.icon {
    display: inline-block;
}

kbd {
    background-color: var(--kbd-bg);
    color: var(--text-color);
    border-radius: 3px;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
}

.vel-fade-enter-active,
.vel-fade-leave-active {
    -webkit-transition: all .1s ease !important;
    transition: all .1s ease !important;
}

.vel-btns-wrapper .btn__next {
    right: 0 !important;
}

.vel-btns-wrapper .btn__prev {
    left: 0 !important;
}

.vel-btns-wrapper .btn__next, .vel-btns-wrapper .btn__prev {
    padding: 2rem !important;
}

.ellipsis-overflow {
    overflow-y: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    margin: 0 0.5rem;
    -webkit-box-orient: vertical;
}

